--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,6 @@
 /*======= Header =======*/
 .header {
+  z-index: 1;
   border-bottom: 1px solid $border-color;
 
   @media screen and (max-width: 767px) {
@@ -14,7 +15,7 @@
   
   @media screen and (max-width: 767px) {
    padding-left: 15px;
-  padding-right: 15px;
+   padding-right: 15px;
   }
  
 }
