--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -37,11 +37,9 @@
   display: none;
 }
 
-
-.menu-button.is-open .header-nav.logo {
+.header-nav .logo.is-hidden {
   opacity: 0;
 }
-
 
 .menu-container {
   z-index: 1;
@@ -69,7 +67,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
     }
   }
 }
