--- a/sass/utils/_shared.scss
+++ b/sass/utils/_shared.scss
@@ -16,6 +16,7 @@ p {
 }
 
 img {
+  z-index: 0;
   display: block;
   max-width: 100%;
   height: auto;
